@@ -2,6 +2,9 @@ Revision history for Perl extension Metabrik.
 
 1.11
    - new: core::context: get_used Command to return a reference to a used Brik
+   - new: Metabrik: brik_author Command
+   - bugfix: shell::script: allow blank lines and comments
+   - FEATURE: Metabrik: brik_author Command
 
 1.10 Tue Oct 27 20:13:36 CET 2015
    - FEATURE: core::context: allows to pass complex structs arguments to run and set Commands
